--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
 
     /* The image used */
 
-    background-image: url("nba2.jpg");
+    background-image: url("https://github.com/cacio95/StatisticalLearningProject/blob/master/nba2.jpg");
 
 
 
